src/assets/css/homepage2.css
/* ... */
.tabBox__list  li { display: inline; color: #005188; font-weight: 700; font-size: 0.9375rem; cursor: pointer;outline: none;}
/* .tabBox__list > li > a { padding: 0.375rem 1.25rem; margin: 0 1rem; font-weight: 400; min-width: 7rem; display: inline-block; text-decoration: none; color: #9D9D9D; background: rgba(255, 255, 255, 0.4); border: 1px solid rgba(0, 0, 0, 0.25); box-sizing: border-box; backdrop-filter: blur(54px); border-radius: 10px; } */

.tabBox__list  li > a { padding: 0.875rem 1.5rem; margin: 0 2rem; font-weight: 400; min-width: 7.5rem; display: inline-block; text-decoration: none; color: #fff; border: 1px solid #30C1FF; 
    /* background: linear-gradient(180deg, #30C1FF 0%, #1597CF 100%), #25B9D3; */
     backdrop-filter: blur(54px); box-sizing: border-box; border-radius: 2rem;width: max-content; }
.tabBox__list  li > a.active,
.tabBox__list  li.active > a,.tabBox__list  li > a:hover { background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(180deg, #30C1FF 0%, #1597CF 100%), #25B9D3; border-color: #2D5D65; }

/* ### content Box ### */
.contentBox { padding: 0; }
.contentBox .splide__track { overflow: visible; }
.contentBox__title { padding: 1.15rem 0 0.75rem; font-size: 1.125rem; font-weight: 700; color: #fff; }
.contentBox__list-wrapper { margin-bottom: 2rem; overflow: auto; }
.contentBox__list { white-space: nowrap; }
.contentBox__item-wrapper { display: flex; }
.contentBox__item { margin-bottom: 15px; height: 14rem; width: 20rem; transition: all 0.5s; display: block; cursor: pointer; position: relative; display: inline-block; white-space: normal; border-radius: 0.625rem; background-position: center center; background-size: cover}
.contentBox__item:after { content: ""; position: absolute; left: 0; top: 0; height: 100%; width: 100%; background: linear-gradient(360deg, rgba(0, 0, 0, 0.6) -10.09%, rgba(0, 0, 0, 0.15) 42.08%); border-radius: 0.625rem;}
/* .contentBox__item-title { position: absolute; text-decoration: none; left: 0; bottom: 0; padding: 1rem; font-weight: 700; font-size: 1.125rem; line-height: 1.375rem; color: #fff; z-index: 1; }
.contentBox__item-title:hover { text-decoration: underline; } */
.contentBox__item-title {transition: all 0.25s; position: absolute; text-decoration: none; border-radius: 0 0 0.625rem 0.625rem; left: 0; bottom: 0; padding: 2rem; font-weight: 600; font-size: 1.125rem; line-height: 1.375rem; color: #fff; z-index: 1; background: rgba(0, 81, 136, 0.6); width: 100%; }
.contentBox__item-title:hover {  }
.contentBox__item-title.contentBox__item-title--pink { background: rgba(206,85,108,0.6); }
.contentBox__item-title.contentBox__item-title--orange { background: hsl(174deg 100% 29% / 70%); }
.contentBox__item-title > ul { transition: all 0.25s; list-style-type: none; display: flex; flex-wrap: wrap; display: none; }
.contentBox__item-title > ul > li { padding: 2rem 0 0; padding-right: 2rem; font-size: 0.75rem; color: #fff; font-weight: 400; }

.contentBox__item-pic { width: 100%; border-radius: 0.625rem; }
.contentBox__item-plus { position: absolute; right: 0; top: 0; font-size: 1.125rem; padding: 2rem; display: block; cursor: pointer; color: #fff; text-decoration: none; z-index: 1; }
.contentBox__item-plus:hover { color: #172c3a; }
.contentBox__item-play { position: absolute; transition: all 0.3s; font-size: 1.25rem; margin: -0.625rem 0 0 -0.625rem; opacity: 0; left: 50%; top: 25%; color: #fff; text-decoration: none; z-index: 1;  transform: scale(0.3)rotate(180deg);}
.contentBox__item:hover { transform: scale(1.25); z-index: 5; position: relative; box-shadow: 0px 0px 5px 1px #cdcdcdc9;}
.contentBox__item:hover .contentBox__item-play { opacity: 1; font-size: 1.8rem;  transform: scale(1)rotate(0deg);}
@keyframes playIcon{
    0%{
        transform: scale(0.3)rotate(-270deg);
    }
    100%{
        transform: scale(1)rotate(0deg);
    }
}
/* .contentBox__item:hover .contentBox__item-title {transition: all 0.1s;} */
.contentBox__item:hover .contentBox__item-title > ul { display: flex; }

.contentBox__item .maincardBox__card-menu { right: 2rem; top: 0.75rem; cursor: pointer; }
.contentBox__item .maincardBox__card-menu-btn { color: #fff; }
.contentBox__item .maincardBox__card-menu-dropdown { min-width: 8rem; }
.contentBox__item .maincardBox__card-menu-dropdown > li > a { font-size: 0.625rem; }

.contentBox__item .custom-slider { padding: 0 0rem; position: absolute; left: 0; bottom: 0; width: 100%; z-index: 1;  border-bottom-left-radius: 3.25rem; border-bottom-right-radius: 3.25rem;}
.contentBox__item .custom-slider__bar { height: 6px; border-radius: 0.625rem; background: rgba(0, 0, 0, 0.4); backdrop-filter: blur(66.7059px);  border-bottom-left-radius: 3.25rem; border-bottom-right-radius: 3.25rem;}
.contentBox__item .custom-slider__bar-inner { border-radius: 0.625rem; background: #2F9DDB;  border-bottom-left-radius: 3.25rem; border-bottom-right-radius: 3.25rem;}

/* .slider-horizontal .slick-prev, 
.slider-horizontal .slick-next { display: none !important; } */
.slider-horizontal .slick-list { padding-top: 1.5rem; padding-bottom: 1.5rem; }
.slider-horizontal .slick-list { margin: 0 -15px; }
.slider-horizontal .slick-slide { margin: 0 15px; }

/* Tablet Portrait size to standard 960 (devices and browsers) */
@media only screen and (max-width: 1200px) {
    /* .contentBox, 
    .slider-banner-desktop .bannerBox__slide { padding-right: 2rem; padding-left: 2rem; } */
    .bannerBox__left,
    .bannerBox__right { width: 50%; }
}

/* All Mobile Sizes (devices and browser) */
@media only screen and (max-width: 1023px) {
    .tabBox.tabBox--new .maincardBox__card-wrapper { max-width: 100%; }
    .bannerBox__center { margin-left: -150px; bottom: -220px; width: 500px; }
    .bannerSubLogo{ width: 100%; }
    /* .contentBox, 
    .tabBox.tabBox--new .maincardBox,
    .bannerBox__slide, 
    .slider-banner-desktop .bannerBox__slide { padding-left: 1rem; padding-right: 1rem; } */
}
/* ... */

